# chip

./: MANIFEST.in  README.MD  README.md  config.ini  pyproject.toml  setup.py
.github/workflows/: publish.yml
chip/: .env
chip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
chippy_ai/: main.py  pyproject.toml
