[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chippy_ai"
version = "0.0.1"
description = "A small example package"
authors = [{ name = "Alex Behrens", email = "alexanderbbehrens@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License", 
    "Operating System :: OS Independent",
]
readme = "README.md"
